# pymetaheuristics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: delivery.yml  integration.yml
pymetaheuristics/genetic_algorithm/: exceptions.py  model.py  steps.py  types.py
pymetaheuristics/genetic_algorithm/steps/: crossovers.py  multations.py  selections.py
pymetaheuristics/utils/: distances.py
scripts/: test.sh
tests/: test_pymetaheuristics.py
tests/genetic_algorithm/: test_model.py  tsp.py
tests/genetic_algorithm/integration/: knapsack.py  tsp.py
tests/genetic_algorithm/steps/: test_crossovers.py  test_multations.py  test_selections.py
tests/utils/: test_distances.py
